[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-auditor-env"
version = "4.0.0"
description = "Deterministic OpenEnv environment for AI content audit tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sanket Dhuri" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "openenv-core>=0.1.0",
  "pydantic>=2.6.0",
  "requests>=2.31.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"
inference = "inference:main"